--- a/assets/package.json
+++ b/assets/package.json
@@ -3,7 +3,7 @@
 	"description": " ",
 	"license": "MIT",
 	"scripts": {
-		"deploy": "webpack --mode production",
+		"deploy": "NODE_ENV=production webpack --mode production",
 		"watch": "webpack --mode development --watch"
 	},
 	"dependencies": {
@@ -16,6 +16,7 @@
 	"devDependencies": {
 		"@babel/core": "^7.0.0",
 		"@babel/preset-env": "^7.0.0",
+		"autoprefixer": "^10.2.4",
 		"babel-loader": "^8.0.0",
 		"copy-webpack-plugin": "^5.1.1",
 		"css-loader": "^3.4.2",
@@ -23,7 +24,11 @@
 		"mini-css-extract-plugin": "^0.9.0",
 		"node-sass": "^4.13.1",
 		"optimize-css-assets-webpack-plugin": "^5.0.1",
+		"postcss": "^8.2.5",
+		"postcss-import": "^14.0.0",
+		"postcss-loader": "^4.2.0",
 		"sass-loader": "^8.0.2",
+		"tailwindcss": "^2.0.3",
 		"terser-webpack-plugin": "^2.3.2",
 		"webpack": "4.41.5",
 		"webpack-cli": "^3.3.2"
